# lyt

./: .gitignore  AI.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  package.json  perf-report.html
.claude-plugin/: marketplace.json
app/: README.md  api.js  app.js  index.html  styles.css
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
docs/: releasing.md  repository-layout.md
install/: clipboard-watcher.ps1  install.ps1  install.sh  windows-context-menu-handler.ps1  windows-context-menu.ps1
mcp/: README.md  package-lock.json  package.json  server.js
schemas/: lyt.artifact-receipt.v1.schema.json  lyt.artifact-verification.v1.schema.json  lyt.doctor.v1.schema.json  lyt.history.v1.schema.json  lyt.inspect.v1.schema.json  lyt.job-event.v1.schema.json  lyt.plan.v1.schema.json  lyt.result.v1.schema.json  lyt.search.v1.schema.json
scripts/: check-pack.js  smoke-linux.sh
src/: agent.js  bootstrap.js  cli.js  clipboard.js  config.js  discovery.js  doctor.js  entry.js  executables.js  formats.js  history.js  interactive.js  jobEvents.js  jsRuntime.js  paths.js  probe.js  progress.js  quality.js  result.js  urls.js  version.js  ytDlp.js
test/: agent.test.js  bootstrap.test.js  cli-receipts.test.js  cli.test.js  clipboard.test.js  config.test.js  discovery.test.js  doctor.test.js  entry.test.js  executables.test.js  formats.test.js  history-artifacts.test.js  history.test.js  (+15 more)
(+31 files in other folders)
