[package]
name = "lyt-app"
version = "0.1.0"
description = "lyt desktop app"
authors = ["TanaTTV"]
edition = "2021"

[lib]
name = "lyt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
